--- a/backend/package.json
+++ b/backend/package.json
@@ -8,6 +8,9 @@
     "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "keywords": [
     "news",
     "ai",
@@ -19,6 +22,7 @@
   "author": "NewsFlow AI Team",
   "license": "MIT",
   "dependencies": {
+    "axios": "^1.6.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2"
