--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
   # Build command for the frontend
-  command = "cd frontend && npm install && npm run build"
+  command = "chmod +x build.sh && ./build.sh"
   
   # Publish directory (where the built files are located)
   publish = "frontend/dist"
@@ -14,6 +14,9 @@
   
   # Build environment
   NODE_ENV = "production"
+  
+  # Ensure npm uses the correct registry
+  NPM_FLAGS = "--legacy-peer-deps"
 
 # Redirects for SPA (Single Page Application)
 [[redirects]]
