Fix CORS issue: move news fetching to backend API and update frontend to use backend endpoints

--- a/frontend/env.example
+++ b/frontend/env.example
@@ -1,9 +1,6 @@
 # Frontend Environment Variables
 
-# NewsAPI Key (required for fetching news)
-VITE_NEWS_API_KEY=your_news_api_key_here
-
-# Backend URL (required for AI summarization)
+# Backend URL (required for news fetching and AI summarization)
 # In development: http://localhost:5000
 # In production: https://your-railway-app-name.railway.app
 VITE_BACKEND_URL=https://your-railway-app-name.railway.app 
