Switch to development mode: update configs, add development guides and environment files

--- a/frontend/env.example
+++ b/frontend/env.example
@@ -3,4 +3,4 @@
 # Backend URL (required for news fetching and AI summarization)
 # In development: http://localhost:5000
 # In production: https://your-railway-app-name.railway.app
-VITE_BACKEND_URL=https://your-railway-app-name.railway.app 
+VITE_BACKEND_URL=http://localhost:5000 
