--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
   # Build command for the frontend
-  command = "cd frontend && npm ci --include=dev && npm run build"
+  command = "cd frontend && npm install && npm run build"
   
   # Publish directory (where the built files are located)
   publish = "frontend/dist"
@@ -13,7 +13,7 @@
   NODE_VERSION = "18"
   
   # Build environment
-  NODE_ENV = "production"
+  NODE_ENV = "development"
 
 # Redirects for SPA (Single Page Application)
 [[redirects]]
